Titan Spawn enc.: Add post-encounter link

--- a/encounters/titanspawn.html
+++ b/encounters/titanspawn.html
@@ -235,7 +235,7 @@ toc:
 	<d-box theme="battlemenu">
 		<d-text asterisk>Kris's SOUL emitted a brilliant light!</d-text>
 	</d-box>
-	<p class="note">The SOUL appears where Kris stands and glows a brilliant white, the light briefly flooding the screen. When the light clears, any Titan Spawn present are gone, having been purified.</p>
+	<p class="note">The SOUL appears where Kris stands and glows a brilliant white, the light briefly flooding the screen. When the light clears, any Titan Spawn present are gone, having been purified, and <a href="{{ '/chapters/chapter4/finalconfrontation#postspawn' | relative_url }}">the encounter ends</a>.</p>
 </section>
 
 <section class="d-section" id="saction">
