Top Bakery: Add missing notes re: inventory additions

--- a/locations/closetworld/town/topbakery.html
+++ b/locations/closetworld/town/topbakery.html
@@ -373,6 +373,7 @@ toc:
 		<d-box theme="dark">
 			<d-text asterisk>(<span class="yellow">LancerCookie</span> was added to your <span class="yellow">ITEMs</span>.)</d-text>
 		</d-box>
+		<p class="note">A <a href="{{ '/misc/darkitems#lancercookie' | relative_url }}">Lancer Cookie</a> is added to the inventory.</p>
 		
 		<h4>If the inventory is full but storage isn't full</h4>
 		<d-box theme="dark">
@@ -382,6 +383,7 @@ toc:
 		<d-box theme="dark">
 			<d-text asterisk>(<span class="yellow">LancerCookie</span> was added to your <span class="yellow">STORAGE</span>.)</d-text>
 		</d-box>
+		<p class="note">A Lancer Cookie is added to the storage.</p>
 
 		<h4>If the inventory and storage are both full</h4>
 		<d-box theme="dark">
