--- a/misc/index.html
+++ b/misc/index.html
@@ -66,6 +66,9 @@ items:
     name: Other
     sublist:
       -
+        url: prophecy
+        name: The Legend of Delta Rune
+      -
         url: unused
         name: UNUSED{END_LINK} - Text found in the game files
 ---
