--- a/encounters/mike.html
+++ b/encounters/mike.html
@@ -394,7 +394,8 @@ toc:
 	</d-box>
 	<d-box theme="battletalk">
 		<d-speaker>Cowboy Hat Mike</d-speaker>
-		<d-text>Dis is a private room.<span class="break"></span> We got private…<span class="break"></span> uh, eyes. We been...<span class="break"></span> investigatin' you.</d-text>
+		<!-- they put in an ellipsis but as a single character instead of ..., and the font doesn't have … so it just doesn't display in-game. RIP -->
+		<d-text>Dis is a private room.<span class="break"></span> We got private<!--…--><span class="break"></span> uh, eyes. We been...<span class="break"></span> investigatin' you.</d-text>
 	</d-box>
 	<d-box theme="battletalk">
 		<d-speaker>Cowboy Hat Mike</d-speaker>
