Prophecy: Fix Legender Roaring IDs

--- a/misc/prophecy.html
+++ b/misc/prophecy.html
@@ -106,7 +106,7 @@ toc:
         id: legender-initial
         name: Introduction
       -
-        id: legender-roaring
+        id: legender-main
         name: The Roaring
       -
         id: legender-heroes
@@ -412,7 +412,7 @@ toc:
 
 	<hr>
 
-	<h3 id="legender-roaring"><a href="#roaring">The Roaring</a></h3>
+	<h3 id="legender-main"><a href="#main">The Roaring</a></h3>
 	<d-box theme="prophecy">
 		<d-text>THE FOUNTAINS FREED,</d-text>
 		<d-text>THE ROARING CRIES.</d-text>
