--- a/misc/index.html
+++ b/misc/index.html
@@ -61,6 +61,10 @@ items:
           -
             url: savepoints
             name: Save points{END_LINK} - Narration accompanying save points
+      -
+        url: generic
+        name: Generic interactions{END_LINK} - Treasure chests
+        # what else is generic?
   -
     id: other
     name: Other
