Replace three dots (...) with ellipsis (…)
NOT in dialogue, just in script notes and whatnot. Since I added the ellipsis to the extended font, it makes more sense to use the actual ellipsis character for better semantics. Or whatever it's called.

--- a/contribute/htmlguide.html
+++ b/contribute/htmlguide.html
@@ -131,7 +131,7 @@ credits: >
 	<p>Borders for dialogue boxes/choice menus etc. Use in the format <code>theme="light"</code>, <code>theme="dark"</code> etc.</p>
 
 	<h3><code>light</code></h3>
-	<p>Default value; if no theme is explicitly set (i.e. you leave out the <code>theme="..."</code> attribute), elements will generally use this.</p>
+	<p>Default value; if no theme is explicitly set (i.e. you leave out the <code>theme="…"</code> attribute), elements will generally use this.</p>
 	<d-box theme="light">
 		<d-text>Light World border, a plain white box.</d-text>
 	</d-box>
