--- a/encounters/clover.html
+++ b/encounters/clover.html
@@ -145,7 +145,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<hr>
 
 	<h3 id="prefight-unused">Unused variant</h3>
-	<p>Intended for if you spoke to Clover in her entirety before leaving the area where she's encountered... but that interaction was cut from the game, so this became inaccessible.</p>
+	<p>Intended for if you spoke to Clover in her entirety before leaving the area where she's encountered… but that interaction was cut from the game, so this became inaccessible.</p>
 	<d-box theme="dark">
 		<d-speaker>Clover</d-speaker>
 		<d-text asterisk>Oh, you don't know the day?</d-text>
