--- a/encounters/hammerofjustice.html
+++ b/encounters/hammerofjustice.html
@@ -584,7 +584,7 @@ toc:
 
 	<h3 id="dialogue-unused">Unused dialogue</h3>
 	<p>Seems to be continuing a scrapped conversation; whatever it links to has been deleted or overwritten.</p>
-	{%- comment %} maybe whatever ballooncon = 31 / 32 were? although that chain seems to be complete with just 31→32... {% endcomment %}
+	{%- comment %} maybe whatever ballooncon = 31 / 32 were? although that chain seems to be complete with just 31→32… {% endcomment %}
 	<d-box theme="battletalk">
 		<d-speaker>Gerson</d-speaker>
 		<d-text>... y'know, since<span class="break"></span> you're gonna<span class="break"></span> lose if ya<span class="break"></span> don't, gahah!</d-text>
