--- a/encounters/lancervssusie.html
+++ b/encounters/lancervssusie.html
@@ -172,5 +172,5 @@ Then check that the obj whose file it appears in actually exists in the canonica
 		<d-text>THEN DIE!</d-text>
 	</d-box>
 
-	<p class="note">The screen cuts to black as Susie attacks... <a href="{{ '/chapters/chapter1/prisonbreak#postfight' | relative_url }}">and misses</a>.</p>
+	<p class="note">The screen cuts to black as Susie attacks… <a href="{{ '/chapters/chapter1/prisonbreak#postfight' | relative_url }}">and misses</a>.</p>
 </section>
