--- a/encounters/mike.html
+++ b/encounters/mike.html
@@ -601,22 +601,22 @@ toc:
 	<d-box theme="battlemenu">
 		<d-text asterisk>The Maus offered you a Fruit Bonus!</d-text>
 	</d-box>
-	<p class="note">The Maus squeezes into a fist, then opens up to reveal...</p>
+	<p class="note">The Maus squeezes into a fist, then opens up to reveal…</p>
 	<hr class="hr2">
 	<h4>First time</h4>
-	<p class="note">...an apple. Kris is healed for 120 HP.</p>
+	<p class="note">…an apple. Kris is healed for 120 HP.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>It was effective!</d-text>
 	</d-box>
 	<hr class="hr3">
 	<h4>Second time</h4>
-	<p class="note">...a banana. Kris is healed for 80 HP.</p>
+	<p class="note">…a banana. Kris is healed for 80 HP.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>It was sort of effective!</d-text>
 	</d-box>
 	<hr class="hr3">
 	<h4>Subsequent times</h4>
-	<p class="note">...a small spaceship. Kris is healed for 40 HP.</p>
+	<p class="note">…a small spaceship. Kris is healed for 40 HP.</p>
 	<d-box theme="battlemenu">
 		<d-text asterisk>It was crunchy, and not very fruit like!</d-text>
 	</d-box>
