--- a/encounters/virovirokun.html
+++ b/encounters/virovirokun.html
@@ -273,7 +273,7 @@ Then check that the obj whose file it appears in actually exists in the canonica
 	<hr>
 
 	<h3 id="dialogue-ambushed">"Ambushed"</h3>
-	<p>Unused. Maybe intended for a surprise battle...?</p>
+	<p>Unused. Maybe intended for a surprise battle…?</p>
 	<d-box theme="battletalk">
 		<d-speaker>Virovirokun</d-speaker>
 		<d-text>Got your nose!</d-text>
