--- a/misc/armor.html
+++ b/misc/armor.html
@@ -962,7 +962,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 	<h3>Unused variant 1</h3>
-	<p>An alternate description and reactions. The flag that's supposed to trigger these never actually gets set. Maybe it was supposed to represent which save slot (1/2/3) you were using, like <a href="{{ '/misc/darkitems#tvdinner' | relative_url }}">some item descriptions</a> do...?</p>
+	<p>An alternate description and reactions. The flag that's supposed to trigger these never actually gets set. Maybe it was supposed to represent which save slot (1/2/3) you were using, like <a href="{{ '/misc/darkitems#tvdinner' | relative_url }}">some item descriptions</a> do…?</p>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
