--- a/misc/index.html
+++ b/misc/index.html
@@ -51,7 +51,7 @@ items:
           -
             url: spells
             name: Spells{END_LINK} - Magic and other abilities
-          # TODO: Other menus...?
+          # TODO: Other menus…?
       -
         name: Enemy- and location-based
         sublist:
