--- a/misc/prophecy.html
+++ b/misc/prophecy.html
@@ -372,7 +372,7 @@ toc:
 <section class="d-section" id="unused">
 	<h2>Unused prophecies</h2>
 
-	<p>Originally intended as part of the Last Prophecy. Based on the internal numbering, this was supposed to be the fourth line, coming after "THE FINAL TRAGEDY UNVEILS" where "TO SAVE [...] ONE WAY" now is.</p>
+	<p>Originally intended as part of the Last Prophecy. Based on the internal numbering, this was supposed to be the fourth line, coming after "THE FINAL TRAGEDY UNVEILS" where "TO SAVE […] ONE WAY" now is.</p>
 	<d-box theme="prophecy" id="end3">
 		<d-text>FOR TO SAVE THE WORLDS,<span class="break"></span> WE LAST OF ALL SAY,</d-text>
 	</d-box>
