--- a/misc/unused.html
+++ b/misc/unused.html
@@ -92,5 +92,5 @@ toc:
 </section>
 
 <section class="d-section">
-	<p class="note">More to come...!</p>
+	<p class="note">More to come…!</p>
 </section>
