--- a/encounters/spamtonneo.html
+++ b/encounters/spamtonneo.html
@@ -659,7 +659,7 @@ toc:
 		<d-text effect="shake-hard">HERE I GO!!!!<span class="break"></span> WATCH ME FLY,<span class="break"></span> [MAMA]!!!!</d-text>
 	</d-box>
 
-	<p class="note">The music cuts out as the last wire is cut. A moment of stillness... and then Spamton falls limp to the ground, eyes dark. The screen cuts to black, then cuts back to the basement area for the <a href="{{ '/chapters/chapter2/spamtonneo#postfight' | relative_url }}">post-battle cutscene</a>.</p>
+	<p class="note">The music cuts out as the last wire is cut. A moment of stillness… and then Spamton falls limp to the ground, eyes dark. The screen cuts to black, then cuts back to the basement area for the <a href="{{ '/chapters/chapter2/spamtonneo#postfight' | relative_url }}">post-battle cutscene</a>.</p>
 
 	<hr>
 
