Watercooler/Weather enc.s: Add version diffs
Also update diffs in TODO file to remove the ones that are documented

--- a/encounters/watercooler.html
+++ b/encounters/watercooler.html
@@ -255,9 +255,17 @@ toc:
 
 	<h3 id="actcool-ft">Flavor text</h3>
 	<p class="note">The party, wearing their gangster outfits and holding cups of water, stand around the Watercooler.</p>
+	<hr class="hr2">
+	<h4>Prior to v0.0.094</h4>
+	<d-box theme="battlemenu">
+		<d-text asterisk>Everyone chat around the watercooler.</d-text>
+	</d-box>
+	<hr class="hr3">
+	<h4>v0.0.094 onwards</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Everyone chatted around the watercooler.</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battlemenu">
 		<d-text asterisk>The watercooler felt included!</d-text>
 	</d-box>
