--- a/encounters/weather.html
+++ b/encounters/weather.html
@@ -107,10 +107,19 @@ toc:
 		<d-speaker>Tenna</d-speaker>
 		<d-text>This battle has<span class="break"></span> a SPECIAL win<span class="break"></span> condition for<span class="break"></span> our contestants!</d-text>
 	</d-box>
+	<hr class="hr2">
+	<h4>Prior to v0.0.094</h4>
+	<d-box theme="battletalk">
+		<d-speaker>Tenna</d-speaker>
+		<d-text>All you have to<span class="break"></span> do say "I love<span class="break"></span> to watch TV" 99<span class="break"></span> times and you<span class="break"></span> will win!</d-text>
+	</d-box>
+	<hr class="hr3">
+	<h4>v0.0.094 onwards</h4>
 	<d-box theme="battletalk">
 		<d-speaker>Tenna</d-speaker>
 		<d-text>All you have to<span class="break"></span> do is say "I love<span class="break"></span> to watch TV" 99<span class="break"></span> times and you will<span class="break"></span> win!</d-text>
 	</d-box>
+	<hr class="hr2">
 	<p class="note">As Tenna mentions the required count, Ralsei reels with shock. Tenna heads offscreen towards the bottom.</p>
 	<d-box theme="battletalk">
 		<d-speaker>Ralsei</d-speaker>
