--- a/encounters/moonwarmer.html
+++ b/encounters/moonwarmer.html
@@ -321,9 +321,17 @@ toc:
 
 	<h3 id="actwarmer-ft">Flavor text</h3>
 	<p class="note">The party, wearing their gangster outfits and holding cups of water, stand around the Moonwarmer.</p>
+	<hr class="hr2">
+	<h4>Prior to v0.0.094</h4>
+	<d-box theme="battlemenu">
+		<d-text asterisk>Everyone chat around the watercooler.</d-text>
+	</d-box>
+	<hr class="hr3">
+	<h4>v0.0.094 onwards</h4>
 	<d-box theme="battlemenu">
 		<d-text asterisk>Everyone chatted around the watercooler.</d-text>
 	</d-box>
+	<hr class="hr2">
 	<d-box theme="battlemenu">
 		<d-text asterisk>The watercooler felt included!</d-text>
 	</d-box>
