Generic: Seperate item get msgs, add ToC

--- a/locations/cyberworld/queenmansion/basement.html
+++ b/locations/cyberworld/queenmansion/basement.html
@@ -77,7 +77,7 @@ toc:
 <section class="d-section" id="chestwest">
 	<h2>Western treasure chests</h2>
 
-	<p class="note">The sole chest in the eastern room, as well as one of the two chests in the western room, are empty and hold only dust. The second of the two chests in the western room contains $1 and uses <a href="{{ '/misc/generic#treasurechest-money' | relative_url }}">generic text</a>.</p>
+	<p class="note">The sole chest in the eastern room, as well as one of the two chests in the western room, are empty and hold only dust. The second of the two chests in the western room contains $1 and uses <a href="{{ '/misc/generic#treasurechest-standard' | relative_url }}">generic text for a treasure chest</a> <a href="{{ '/misc/generic#moneyget' | relative_url }}">containing money</a>.</p>
 </section>
 
 <section class="d-section" id="powersource">
@@ -218,9 +218,9 @@ toc:
 <section class="d-section" id="chesteast">
 	<h2>Eastern treasure chest</h2>
 	<p>Present in the transformed eastern hallway after fighting <a href="{{ '/chapters/chapter2/spamtonneo' | relative_url }}">Spamton NEO</a>, if the relevant equipment inventory was full at the time of the encounter.</p>
-	<p class="note">Uses generic text for treasure chests:</p>
+	<p class="note">Uses <a href="{{ '/misc/generic#treasurechest-standard' | relative_url }}">generic text for treasure chests</a>:</p>
 	<ul class="note">
-		<li><a href="{{ '/misc/generic#treasurechest-weapon' | relative_url }}">weapon variant</a> for the <a href="{{ '/misc/weapons#puppetscarf' | relative_url }}">PuppetScarf</a> if Spamton NEO was defeated</li>
-		<li><a href="{{ '/misc/generic#treasurechest-armor' | relative_url }}">armor variant</a> for the <a href="{{ '/misc/armor#dealmaker' | relative_url }}">Dealmaker</a> if Spamton NEO was spared</li>
+		<li><a href="{{ '/misc/generic#weaponget' | relative_url }}">weapon variant</a> for the <a href="{{ '/misc/weapons#puppetscarf' | relative_url }}">PuppetScarf</a> if Spamton NEO was defeated</li>
+		<li><a href="{{ '/misc/generic#armorget' | relative_url }}">armor variant</a> for the <a href="{{ '/misc/armor#dealmaker' | relative_url }}">Dealmaker</a> if Spamton NEO was spared</li>
 	</ul>
 </section>
