--- a/misc/index.html
+++ b/misc/index.html
@@ -63,7 +63,7 @@ items:
             name: Save points{END_LINK} - Narration accompanying save points
       -
         url: generic
-        name: Generic interactions{END_LINK} - Treasure chests
+        name: Generic interactions{END_LINK} - Getting items/equipment/money, treasure chests
         # what else is generic?
   -
     id: other
