Generic: Add POINTs get message

--- a/misc/generic.html
+++ b/misc/generic.html
@@ -37,6 +37,9 @@ toc:
       -
         id: moneyget
         name: Money
+      -
+        id: pointsget
+        name: POINTs
   -
     id: treasurechest
     name: Treasure chests
@@ -133,6 +136,15 @@ toc:
 		<d-text asterisk>(<span class="yellow">&lt;#&gt; Dark Dollars</span> was added to your <span class="yellow">MONEY HOLE</span>.)</d-text>
 	</d-box>
 	<p class="note">$&lt;#&gt; is added to your total money.</p>
+
+	<hr>
+
+	<h3 id="pointsget">POINTs</h3>
+	<p>(If 1 POINT is being awarded, the below narration will read "1 POINTs".)</p>
+	<d-box theme="dark">
+		<d-text asterisk>(<span class="yellow">&lt;#&gt; POINTs</span> was added to your <span class="yellow">SCORE</span>.)</d-text>
+	</d-box>
+	<p class="note">$&lt;#&gt; is added to your score, up to a maximum of 9999 POINTs.</p>
 </section>
 
 <section class="d-section" id="treasurechest">
