Crosslink A/B/C-Rank rewards rooms

--- a/locations/tvworld/greenroom/arcade.html
+++ b/locations/tvworld/greenroom/arcade.html
@@ -29,6 +29,17 @@ sources:
     chapters: [3]
     note: Pippins interaction
 
+see_also:
+  -
+    url: /locations/tvworld/greenroom/rewardsroom
+    name: ABC-Rank rewards room
+  -
+    url: /locations/tvworld/greenroom/ballmachine
+    name: Ball Machine{END_LINK} - B-Rank rewards room
+  -
+    url: /locations/tvworld/greenroom/cooler
+    name: Cooler{END_LINK} - C-Rank rewards room
+
 toc:
   -
     id: chefposter
