--- a/locations/tvworld/greenroom/ballmachine.html
+++ b/locations/tvworld/greenroom/ballmachine.html
@@ -37,6 +37,17 @@ sources:
     chapters: [3]
     note: 1225 POINTs mystery room
 
+see_also:
+  -
+    url: /locations/tvworld/greenroom/rewardsroom
+    name: ABC-Rank rewards room
+  -
+    url: /locations/tvworld/greenroom/arcade
+    name: Arcade{END_LINK} - A-Rank rewards room
+  -
+    url: /locations/tvworld/greenroom/cooler
+    name: Cooler{END_LINK} - C-Rank rewards room
+
 toc:
   -
     id: userguide
