--- a/locations/tvworld/greenroom/cooler.html
+++ b/locations/tvworld/greenroom/cooler.html
@@ -21,6 +21,17 @@ sources:
     chapters: [3]
     note: crater (subsequent times)
 
+see_also:
+  -
+    url: /locations/tvworld/greenroom/rewardsroom
+    name: ABC-Rank rewards room
+  -
+    url: /locations/tvworld/greenroom/arcade
+    name: Arcade{END_LINK} - A-Rank rewards room
+  -
+    url: /locations/tvworld/greenroom/ballmachine
+    name: Ball Machine{END_LINK} - B-Rank rewards room
+
 toc:
   -
     id: leftzapper
