TV World Arcade: Simplify section titles
Hey why all the prepositions actually. (I think they're prepositions?)

--- a/locations/tvworld/greenroom/arcade.html
+++ b/locations/tvworld/greenroom/arcade.html
@@ -43,13 +43,13 @@ see_also:
 toc:
   -
     id: chefposter
-    name: Poster for the Cooking Challenge
+    name: Cooking Challenge poster
   -
     id: chefdoor
-    name: Door to the Cooking Challenge
+    name: Cooking Challenge door
   -
     id: bandposter
-    name: Poster for Rock Video
+    name: Rock Video poster
     subheadings:
       -
         id: bandposter-locked
@@ -59,7 +59,7 @@ toc:
         name: After completing the Island Board
   -
     id: banddoor
-    name: Door to Rock Video
+    name: Rock Video door
     subheadings:
       -
         id: banddoor-locked
@@ -69,7 +69,7 @@ toc:
         name: After completing the Island Board
   -
     id: monstermovieposter
-    name: Poster for Monster Movie
+    name: Monster Movie poster
     subheadings:
       -
         id: monstermovieposter-locked
@@ -82,7 +82,7 @@ toc:
         name: After playing for the first time
   -
     id: monstermoviedoor
-    name: Door to Monster Movie
+    name: Monster Movie door
     subheadings:
       -
         id: monstermoviedoor-locked
@@ -95,7 +95,7 @@ toc:
         name: After playing for the first time
 ---
 <section class="d-section" id="chefposter">
-	<h2>Poster for the Cooking Challenge</h2>
+	<h2>Cooking Challenge poster</h2>
 	<p class="note">The poster shows Ralsei wearing a chef's hat under cursive text reading "Chefs".</p>
 
 	<d-box theme="dark">
@@ -138,7 +138,7 @@ toc:
 </section>
 
 <section class="d-section" id="chefdoor">
-	<h2>Door to the Cooking Challenge</h2>
+	<h2>Cooking Challenge door</h2>
 	<p class="note">The marquee above the door reads "<span class="fnt-tv">NOW PLAYING......COOKING SHOW</span>".</p>
 
 	<d-box theme="dark">
@@ -157,7 +157,7 @@ toc:
 </section>
 
 <section class="d-section" id="bandposter">
-	<h2>Poster for Rock Video</h2>
+	<h2>Rock Video poster</h2>
 
 	<h3 id="bandposter-locked">Before completing the Island Board</h3>
 	<p class="note">The poster is blue with a white question mark.</p>
@@ -206,7 +206,7 @@ toc:
 </section>
 
 <section class="d-section" id="banddoor">
-	<h2>Door to Rock Video</h2>
+	<h2>Rock Video door</h2>
 
 	<h3 id="banddoor-locked">Before completing the Island Board</h3>
 	<p class="note">The marquee above the door reads "<span class="fnt-tv">COMING SOON......</span>".</p>
@@ -243,7 +243,7 @@ toc:
 </section>
 
 <section class="d-section" id="monstermovieposter">
-	<h2>Poster for Monster Movie</h2>
+	<h2>Monster Movie poster</h2>
 
 	<h3 id="monstermovieposter-locked">Before unlocking the game</h3>
 	<p class="note">The poster is blue with a white question mark.</p>
@@ -314,7 +314,7 @@ toc:
 </section>
 
 <section class="d-section" id="monstermoviedoor">
-	<h2>Door to Monster Movie</h2>
+	<h2>Monster Movie door</h2>
 
 	<h3 id="monstermoviedoor-locked">Before unlocking the game</h3>
 	<p class="note">A sunglasses-wearing Pippins stands in front of the doors, jumping up and down. Upon interacting with them, your current money and POINTs totals are displayed above the dialogue box.</p>
