Document TV World's ABC-Rank rewards hub

--- a/locations/index.html
+++ b/locations/index.html
@@ -71,6 +71,11 @@ items:
   -
     url: tvworld
     name: TV World
+    sublist:
+      -
+        url: greenroom
+        name: Green Room
+        splitter: "#" # yes it has its own page but we need to link to the tvworld index right now
   -
     url: darksanctuary
     name: Dark Sanctuary
