--- a/locations/tvworld/index.html
+++ b/locations/tvworld/index.html
@@ -13,8 +13,17 @@ items:
     name: Green Room
     sublist:
       -
+        url: rewardsroom
+        name: ABC-Rank rewards room
+      -
+        url: arcade
+        name: Arcade{END_LINK} - A-Rank rewards room
+      -
         url: ballmachine
         name: Ball Machine{END_LINK} - B-Rank rewards room
+      -
+        url: cooler
+        name: Cooler{END_LINK} - C-Rank rewards room
   -
     id: other
     name: Other
