ABC-Rank rewards hub: Condense "Return" option font

--- a/locations/tvworld/greenroom/rewardsroom.html
+++ b/locations/tvworld/greenroom/rewardsroom.html
@@ -294,7 +294,7 @@ toc:
 	<d-box theme="shopright">
 		<d-text>Select an object.</d-text>
 	</d-box>
-	<p class="note">The menu on the left offers the options "<a href="#sellitem" class="fnt-condensed">Sell Items</a>", "<a href="#sellweapon" class="fnt-condensed">Sell Weapons</a>", "<a href="#sellarmor" class="fnt-condensed">Sell Armor</a>", "<a href="#sellitem" class="fnt-condensed">Sell Pocket Items</a>", and "Return".</p>
+	<p class="note">The menu on the left offers the options "<a href="#sellitem" class="fnt-condensed">Sell Items</a>", "<a href="#sellweapon" class="fnt-condensed">Sell Weapons</a>", "<a href="#sellarmor" class="fnt-condensed">Sell Armor</a>", "<a href="#sellitem" class="fnt-condensed">Sell Pocket Items</a>", and "<span class="fnt-condensed">Return</span>", the last of which sends you back to the <a href="#vendingreverse-initial">initial menu</a>.</p>
 
 	<h4 id="sellitem">Initial item sale screen</h4>
 	<d-box theme="shopright">
