Generics/Vending machine: Fix "dark" theme to "shopleft"

--- a/misc/generic.html
+++ b/misc/generic.html
@@ -201,7 +201,7 @@ toc:
 	<p>Present in Chapter 3.</p>
 
 	<h3 id="vendingmachine-initial">Initial menu</h3>
-	<d-box theme="dark">
+	<d-box theme="shopleft">
 		<d-text asterisk>(It's a vending machine.)</d-text>
 	</d-box>
 	<p class="note">The menu on the right offers varying options depending on the machine, often including "<a href="#vendingmachine-buy">Buy</a>". The last option is always "<a href="#vendingmachine-exit">Exit</a>".</p>
